@@ -1,34 +1,34 @@
 package no.unit.nva.publication.ticket.read;
 
 import static java.net.HttpURLConnection.HTTP_OK;
+import static no.unit.nva.model.testing.PublicationGenerator.randomContributorWithId;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import static nva.commons.apigateway.AccessRight.MANAGE_DOI;
 import static nva.commons.apigateway.AccessRight.MANAGE_PUBLISHING_REQUESTS;
 import static nva.commons.apigateway.AccessRight.MANAGE_RESOURCES_STANDARD;
 import static nva.commons.apigateway.AccessRight.SUPPORT;
+import static nva.commons.core.attempt.Try.attempt;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsEqual.equalTo;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.commons.json.JsonUtils;
+import no.unit.nva.model.CuratingInstitution;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.PublicationStatus;
+import no.unit.nva.model.Username;
 import no.unit.nva.publication.PublicationServiceConfig;
 import no.unit.nva.publication.model.business.DoiRequest;
 import no.unit.nva.publication.model.business.Entity;
@@ -45,8 +45,8 @@ import no.unit.nva.testutils.HandlerRequestBuilder;
 import nva.commons.apigateway.AccessRight;
 import nva.commons.apigateway.GatewayResponse;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
-import nva.commons.core.ioutils.IoUtils;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -97,9 +97,8 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
                                                                PublicationStatus status)
         throws IOException, ApiGatewayException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
-        mockSiktOrg();
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var request = curatorRquestsTicketsForPublication(publication);
+        var request = curatorRequestsTicketsForPublication(publication);
         handler.handleRequest(request, output, CONTEXT);
         assertThatResponseContainsExpectedTickets(ticket);
     }
@@ -166,11 +165,11 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
         Class<? extends TicketEntry> ticketType, AccessRight[] accessRight)
         throws ApiGatewayException, IOException {
         var publication = TicketTestUtils.createPersistedPublication(PublicationStatus.PUBLISHED, resourceService);
-        mockSiktOrg();
 
-        TicketTestUtils.createPersistedTicket(publication, DoiRequest.class, ticketService);
-        TicketTestUtils.createPersistedTicket(publication, GeneralSupportRequest.class, ticketService);
-        TicketTestUtils.createPersistedTicket(publication, PublishingRequestCase.class, ticketService);
+        var ownerAffiliation = publication.getResourceOwner().getOwnerAffiliation();
+        DoiRequest.fromPublication(publication).withOwnerAffiliation(ownerAffiliation).persistNewTicket(ticketService);
+        PublishingRequestCase.fromPublication(publication).withOwnerAffiliation(ownerAffiliation).persistNewTicket(ticketService);
+        GeneralSupportRequest.fromPublication(publication).withOwnerAffiliation(ownerAffiliation).persistNewTicket(ticketService);
 
         var request = curatorWithAccessRightRequestTicketsForPublication(publication, accessRight);
         handler.handleRequest(request, output, CONTEXT);
@@ -181,20 +180,12 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
         assertThat(body.getTickets(), hasSize(3));
     }
 
-    private void mockSiktOrg() {
-        when(uriRetriever.getRawContent(
-            eq(URI.create("https://api.dev.nva.aws.unit.no/cristin/organization/20754.6.0.0")),
-            any())).thenReturn(
-            Optional.of(IoUtils.stringFromResources(Path.of("cristin-orgs/20754.6.0.0.json"))));
-    }
-
     @ParameterizedTest
     @MethodSource("accessRightAndTicketTypeProviderDraft")
     void shouldListTicketsOfTypeCuratorHasAccessRightToOperateOnDraft(
         Class<? extends TicketEntry> ticketType, AccessRight[] accessRight)
         throws ApiGatewayException, IOException {
         var publication = TicketTestUtils.createPersistedPublication(PublicationStatus.DRAFT, resourceService);
-        mockSiktOrg();
 
         TicketTestUtils.createPersistedTicket(publication, PublishingRequestCase.class, ticketService);
 
@@ -215,17 +206,99 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
         throws ApiGatewayException, IOException {
         var publication = TicketTestUtils.createPersistedPublication(PublicationStatus.PUBLISHED, resourceService);
 
-        TicketTestUtils.createPersistedTicket(publication, DoiRequest.class, ticketService);
-        TicketTestUtils.createPersistedTicket(publication, PublishingRequestCase.class, ticketService);
-        TicketTestUtils.createPersistedTicket(publication, GeneralSupportRequest.class, ticketService);
+        var ownerAffiliation = publication.getResourceOwner().getOwnerAffiliation();
+        DoiRequest.fromPublication(publication).withOwnerAffiliation(ownerAffiliation).persistNewTicket(ticketService);
+        PublishingRequestCase.fromPublication(publication).withOwnerAffiliation(
+            ownerAffiliation).persistNewTicket(ticketService);
+        GeneralSupportRequest.fromPublication(publication).withOwnerAffiliation(
+            ownerAffiliation).persistNewTicket(ticketService);
 
-        var request = curatorWithAccessRightForPublication(publication, accessRight);
+        var request = userRequestsTickets(publication, randomUri(), ownerAffiliation, accessRight);
         handler.handleRequest(request, output, CONTEXT);
 
         var response = GatewayResponse.fromOutputStream(output, TicketCollection.class);
         var body = response.getBodyObject(TicketCollection.class);
 
         assertThat(body.getTickets(), hasSize(3));
+    }
+
+    @Test
+    void shouldListCompletedDoiRequestAndPublishingRequestsTicketsForContributorAtAnotherInstitutionThanPublicationOwner()
+        throws ApiGatewayException, IOException {
+        var publication = TicketTestUtils.createPersistedPublication(PublicationStatus.PUBLISHED, resourceService);
+        var contributorId = randomUri();
+        var contributor = randomContributorWithId(contributorId);
+        publication.getEntityDescription().setContributors(List.of(contributor));
+        resourceService.updatePublication(publication);
+
+        persistCompletedTicketsForPublication(publication,
+                                              DoiRequest.class, PublishingRequestCase.class, GeneralSupportRequest.class);
+
+        var request = userRequestsTickets(publication, contributorId, randomUri());
+        handler.handleRequest(request, output, CONTEXT);
+
+        var response = GatewayResponse.fromOutputStream(output, TicketCollection.class);
+        var body = response.getBodyObject(TicketCollection.class).getTickets();
+
+        assertThat(body, hasSize(2));
+
+        var returnedTicketTypes = body.stream().map(TicketDto::ticketType).toList();
+
+        assertThat(returnedTicketTypes, containsInAnyOrder(
+            DoiRequest.class, PublishingRequestCase.class));
+    }
+
+    private void persistCompletedTicketsForPublication(Publication publication,
+                                                       Class<? extends TicketEntry>... ticketTypes) {
+        Arrays.stream(ticketTypes).forEach(ticketType -> {
+            attempt(() -> TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService))
+                .map(ticket -> ticket.withOwnerAffiliation(randomUri()))
+                .map(ticket -> ticket.complete(publication, new Username(randomString())))
+                .forEach(ticketEntry -> ticketEntry.persistUpdate(ticketService));
+        });
+    }
+
+    @Test
+    void shouldNotListPendingTicketsThatHasOtherOwnerAffiliationThanUserCustomer()
+        throws ApiGatewayException, IOException {
+        var publication = TicketTestUtils.createPersistedPublication(PublicationStatus.PUBLISHED, resourceService);
+        var contributorId = randomUri();
+        var contributor = randomContributorWithId(contributorId);
+        publication.getEntityDescription().setContributors(List.of(contributor));
+        resourceService.updatePublication(publication);
+        DoiRequest.fromPublication(publication).withOwnerAffiliation(randomUri()).persistNewTicket(ticketService);
+        PublishingRequestCase.fromPublication(publication).withOwnerAffiliation(randomUri()).persistNewTicket(ticketService);
+        GeneralSupportRequest.fromPublication(publication).withOwnerAffiliation(randomUri()).persistNewTicket(ticketService);
+
+        var request = userRequestsTickets(publication, contributorId, randomUri());
+        handler.handleRequest(request, output, CONTEXT);
+
+        var response = GatewayResponse.fromOutputStream(output, TicketCollection.class);
+        var body = response.getBodyObject(TicketCollection.class);
+
+        assertThat(body.getTickets(), is(emptyIterable()));
+    }
+
+    @Test
+    void shouldNotListGeneralSupportRequestsThatHasOtherCuratingCustomerThanUserCustomer()
+        throws ApiGatewayException, IOException {
+        var publication = TicketTestUtils.createPersistedPublication(PublicationStatus.PUBLISHED, resourceService);
+        var contributorId = randomUri();
+        var contributor = randomContributorWithId(contributorId);
+        publication.getEntityDescription().setContributors(List.of(contributor));
+        resourceService.updatePublication(publication);
+        GeneralSupportRequest.fromPublication(publication)
+            .withOwnerAffiliation(randomUri())
+            .persistNewTicket(ticketService)
+            .complete(publication, new Username(randomString())).persistUpdate(ticketService);
+
+        var request = userRequestsTickets(publication, contributorId, randomUri());
+        handler.handleRequest(request, output, CONTEXT);
+
+        var response = GatewayResponse.fromOutputStream(output, TicketCollection.class);
+        var body = response.getBodyObject(TicketCollection.class);
+
+        assertThat(body.getTickets(), is(emptyIterable()));
     }
 
     private TicketEntry createPersistedTicketWithMessage(Class<? extends TicketEntry> ticketType,
@@ -247,10 +320,11 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
                    .withCurrentCustomer(publication.getPublisher().getId())
                    .withUserName(publication.getResourceOwner().getOwner().getValue())
                    .withPersonCristinId(randomUri())
+                   .withTopLevelCristinOrgId(publication.getResourceOwner().getOwnerAffiliation())
                    .build();
     }
 
-    private static InputStream curatorRquestsTicketsForPublication(Publication publication)
+    private static InputStream curatorRequestsTicketsForPublication(Publication publication)
         throws JsonProcessingException {
         return new HandlerRequestBuilder<Void>(JsonUtils.dtoObjectMapper)
                    .withPathParameters(constructPathParameters(publication))
@@ -259,8 +333,7 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
                    .withPersonCristinId(randomUri())
                    .withAccessRights(publication.getPublisher().getId(), MANAGE_PUBLISHING_REQUESTS, MANAGE_DOI,
                                      SUPPORT, MANAGE_RESOURCES_STANDARD)
-                   .withTopLevelCristinOrgId(
-                       URI.create("https://api.dev.nva.aws.unit.no/cristin/organization/20754.0.0.0"))
+                   .withTopLevelCristinOrgId(publication.getResourceOwner().getOwnerAffiliation())
                    .build();
     }
 
@@ -295,27 +368,14 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
     private InputStream curatorWithAccessRightRequestTicketsForPublication(Publication publication,
                                                                            AccessRight[] accessRight)
         throws JsonProcessingException {
-        var customer = publication.getCuratingInstitutions().stream().findFirst().orElseThrow();
+        var customer = publication.getCuratingInstitutions().stream().map(CuratingInstitution::id).findFirst().orElseThrow();
         return new HandlerRequestBuilder<Void>(JsonUtils.dtoObjectMapper)
                    .withPathParameters(constructPathParameters(publication))
                    .withCurrentCustomer(customer)
                    .withUserName(randomString())
                    .withAccessRights(customer, accessRight)
                    .withPersonCristinId(randomUri())
-                   .withTopLevelCristinOrgId(
-                       URI.create("https://api.dev.nva.aws.unit.no/cristin/organization/20754.0.0.0"))
-                   .build();
-    }
-
-    private InputStream curatorWithAccessRightForPublication(Publication publication,
-                                                             AccessRight[] accessRight)
-        throws JsonProcessingException {
-        return new HandlerRequestBuilder<Void>(JsonUtils.dtoObjectMapper)
-                   .withPathParameters(constructPathParameters(publication))
-                   .withCurrentCustomer(publication.getPublisher().getId())
-                   .withUserName(publication.getResourceOwner().getOwner().getValue())
-                   .withAccessRights(publication.getPublisher().getId(), accessRight)
-                   .withPersonCristinId(randomUri())
+                   .withTopLevelCristinOrgId(publication.getResourceOwner().getOwnerAffiliation())
                    .build();
     }
 
@@ -326,9 +386,21 @@ class ListTicketsForPublicationHandlerTest extends TicketTestLocal {
                                           .stream()
                                           .map(TicketDtoParser::toTicket)
                                           .map(Entity::getIdentifier)
-                                          .collect(Collectors.toList());
+                                          .toList();
         var expectedIdentifiers = ticket.getIdentifier();
         assertThat(response.getStatusCode(), is(equalTo(HTTP_OK)));
         assertThat(actualTicketIdentifiers, containsInAnyOrder(expectedIdentifiers));
+    }
+
+    private InputStream userRequestsTickets(Publication publication, URI userId, URI topLevelOrgCristinId, AccessRight... accessRight)
+        throws JsonProcessingException {
+        return new HandlerRequestBuilder<Void>(JsonUtils.dtoObjectMapper)
+                   .withPathParameters(constructPathParameters(publication))
+                   .withCurrentCustomer(randomUri())
+                   .withUserName(randomString())
+                   .withAccessRights(publication.getPublisher().getId(), accessRight)
+                   .withPersonCristinId(userId)
+                   .withTopLevelCristinOrgId(topLevelOrgCristinId)
+                   .build();
     }
 }
